@@ -11,11 +11,18 @@ spark-submit --driver-memory 2g --executor-memory 5g --class com.pzx.dataSplit.T
 --conf spark.driver.extraJavaOptions="-Dlog4j.configuration=file:/home/pzx/log4j-driver.properties" \
 split_txt.jar hdfs://master:9000/pzx/txtdata hdfs://master:9000/pzx/custom
 
-spark-submit --driver-memory 2g --executor-memory 15g --class com.pzx.dataSplit.TxtSplit2 \
+spark-submit --driver-memory 2g --executor-memory 4g --executor-cores 1 --class com.pzx.dataSplit.TxtSplit2 \
 --conf spark.driver.extraJavaOptions="-Dlog4j.configuration=file:/home/pzx/log4j-driver.properties" \
---conf spark.memory.fraction=0.6 --conf spark.memory.storageFraction=0.3  \
---conf spark.executor.extraJavaOptions="-XX:+UseG1GC -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -Xloggc:/tmp/splitPointCloudGC.log" \
-splitPointCloud_new.jar hdfs://master:9000/pzx/txtdata/sg27.txt hdfs://master:9000/pzx/custom
+--conf spark.memory.fraction=0.6 --conf spark.memory.storageFraction=0.4  \
+--conf spark.driver.extraClassPath="/usr/local/spark-2.4.4/hbase-jars/*" \
+--conf spark.executor.extraClassPath="/usr/local/spark-2.4.4/hbase-jars/*" \
+--conf spark.executor.extraJavaOptions="-XX:+UseG1GC -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -Xloggc:/tmp/splitPointCloudGC.log -XX:+PrintGCDateStamps" \
+--conf spark.memory.offHeap.enabled="true"  \
+--conf spark.memory.offHeap.size="1048576" \
+--conf spark.executor.extraJavaOptions="-Xmn2g" \
+splitPointCloud_new.jar hdfs://master:9000/pzx/txtdata/sg27.txt hdfs://master:9000/pzx/custom streetTestData
+
+
 
 
 --conf spark.driver.extraJavaOptions="-Dlog4j.debug=true" \
